html/css/style.css
/* Define custom properties */
:root {
    --dse-base-color: #88DBDF;/* ACDH-AQUA in ACDH CD color scheme */
}

/* Class for color styling */
.base-color {
    color: var(--dse-base-color);
}

/* Style footer */
footer {
    border-top: solid;
    border-color: var(--dse-base-color);
}
.footerlogo {
    height: 60px;
}

/* needed for interactive map in listplace.xsl */
div#map {
    height: 50vh;
}

/* Match bootstrap navlink focus outline color. */
:focus-visible {
    outline: 0;
    box-shadow: 0 0 0 .25rem rgba(13,110,253,.25);
}

.entity {
    text-decoration: underline dotted;
    cursor: pointer;
}

